# hartree_fock_cpp

./: ..gitignore.swp  .gitignore  CMakeLists.txt  README.md  app  hf
apps/: bl_scan.cpp  dissociation.cpp  single_run.cpp  visualization.cpp
basis/6-31G/: Al.csv  Ar.csv  B.csv  Be.csv  C.csv  Cl.csv  F.csv  H.csv  He.csv  Li.csv  Mg.csv  N.csv  Na.csv  Ne.csv  O.csv  P.csv  S.csv  Si.csv
basis/6-31G*/: Al.csv  Ar.csv  B.csv  Be.csv  C.csv  Cl.csv  F.csv  Li.csv  Mg.csv  N.csv  Na.csv  Ne.csv  O.csv  P.csv  S.csv  Si.csv  n_basis.csv
basis/STO-3G/: Al.csv  Ar.csv  B.csv  Be.csv  C.csv  Cl.csv  F.csv  H.csv  He.csv  Li.csv  Mg.csv  N.csv  Na.csv  Ne.csv  O.csv  P.csv  S.csv  Si.csv  _block_report.json  _summary.csv
basis/cc-pVDZ/: Al.csv  Ar.csv  B.csv  Be.csv  C.csv  Cl.csv  F.csv  H.csv  He.csv  Li.csv  Mg.csv  N.csv  Na.csv  Ne.csv  O.csv  P.csv  S.csv  Si.csv  _block_report.json  _summary.csv
basis/cc-pVTZ/: Al.csv  Ar.csv  B.csv  Be.csv  C.csv  Cl.csv  F.csv  H.csv  He.csv  Li.csv  Mg.csv  N.csv  Na.csv  Ne.csv  O.csv  P.csv  S.csv  Si.csv  _block_report.json  _summary.csv
cuda/: eri.cu
cuda/include/: evaluation.cuh  indexing.cuh  kernels.cuh  recursion.cuh
cuda/src/: eri.cu  visual.cu
examples/: CH4_c.json  LiF_c.json  MgO_c.json  MgO_g.json  NH3_c.json  NH3_g.json  NaCl_c.json  NaF_c.json  NaF_g.json  SO2_c.json
examples/bl_scan/: CH4.json  F2.json  H2.json  NH3.json
examples/dissociation/: C2H6.json  CH4.json  H2.json  H2O.json  HF.json  NH3.json
examples/rhf/: CH4.json  LiF.json
examples/single_run/: 1_4_benzoquinone.json  BCl3.json  BF3.json  C.json  C2H2.json  C2H4.json  C2H5OH.json  C2H6.json  CH2.json  CH2O.json  CH3.json  CH3OH.json  CN.json  CO2.json  COCl2.json  Cl2.json  H2.json  HNO3.json  N2.json  N2O4.json  NH.json  NO.json  Na.json  O2.json  OH.json  SO3.json  benzene.json  benzoic_acid.json  benzothiophene.json  catechol.json  cystosine.json  nitrate_ion.json  phenol.json  single_atom.json  uracile.json
examples/visualization/: options.json
include/: atoms.hpp  basis.hpp  cube.hpp  debug.hpp  eri_cpu.hpp  eri_gpu.hpp  gpu_types.hpp  indexing.hpp  integrals.hpp  linalg.hpp  run.hpp  save.hpp  scf.hpp  types.hpp  visual.hpp  visualization.hpp
results/STO-3G/: BeH2_vr_1.csv  BeH2_vr_2.csv  H2_vr.csv  HF_vr.csv  HeHp_vr.csv  LiH_vr_1.csv  LiH_vr_2.csv
scripts/: analysis2.py  hf  run.sh  tasks.sh  test.sh  test2.sh  test3.sh  test4.sh
scripts/python/: analysis.py  density2d.py
scripts/shell/: run.sh  tasks.sh
tests/: 2dslice.cpp  H2O.cpp  H2_2dslice.cpp  cube.cpp  eri_debug.cpp  test.cpp  test.cu  test1.cpp  test2.cpp  test3.cpp
